tests/snapshots/integration_tests__init_npins_overlay_stdenv.snap
---
source: tests/integration_tests.rs
expression: overlay_content
---
# Overlay generated by nix-template.
#
# Apply with `pkgs.extend (import ./nix/overlay.nix)` from a default.nix,
# flake.nix, or release.nix. Add packages by appending callPackage lines
# below.
final: prev: {
  hello = final.callPackage ./pkgs/hello/package.nix { };
}
