tests/snapshots/integration_tests__init_npins_sources_json.snap
---
source: tests/integration_tests.rs
expression: sources_content
---
{
  "pins": {},
  "version": 7
}
