tests/snapshots/integration_tests__init_npins_wrapper_python.snap
---
source: tests/integration_tests.rs
expression: wrapper
---
# Top-level default.nix generated by nix-template.
#
# Build with `nix-build` from the project root. The overlay in
# nix/overlay.nix is applied to nixpkgs so that `pkgs.python3Packages.requests` resolves to
# the locally defined package.
let
  sources = import ./npins;
  pkgs = import sources.nixpkgs {
    overlays = [ (import ./nix/overlay.nix) ];
  };
in
pkgs.python3Packages.requests
